--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,6 +21,8 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.AllowStaticLighting=False
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.AutoExposure.Bias=10.000000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
