--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,34 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+Content/Kristala/MasterMaterials/M_MetalScratched.uasset
+Content/Kristala/MasterMaterials/M_MetalScratched_Iron.uasset
+Content/Kristala/Meshes/Streetmarket/Tents/SM_Streetmarket_Assets_Tent_171.uasset
+Content/Kristala/Meshes/Streetmarket/Toppers/SM_Streetmarket_Assets_Toppers_000_low.uasset
+Content/Kristala/Meshes/Streetmarket/Toppers/SM_Streetmarket_Assets_Toppers_001_low.uasset
+Content/Kristala/Meshes/Streetmarket/Toppers/SM_Streetmarket_Assets_Toppers_002_low.uasset
+Content/Kristala/Meshes/Streetmarket/Toppers/SM_Streetmarket_Assets_Toppers_003_low.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_09.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_LowerPart_11_v2.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_LowerPart_13.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_Post25.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_SM_Individual_09.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_SM_LowerPart_013.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_SM_LowerPart_014.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_SM_UpperPart_007.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_UpperPart_07.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Assets_UpperPart_09.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Lower11v2.uasset
+Content/Kristala/Meshes/Streetmarket/UpperLower_Parts/SM_Streetmarket_Lower13.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_LowerPart_11_v2.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_LowerPart_13.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_Post25.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_SM_Individual_09.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_SM_LowerPart_013.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_SM_LowerPart_014.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_SM_UpperPart_007.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_UpperPart_07.uasset
+Content/Kristala/Meshes/UpperLower_Parts/SM_Streetmarket_Assets_UpperPart_09.uasset
+Content/Kristala/Textures/Streetmarket/Flags/T_FlagsToppers_Masks.uasset
+Content/Kristala/Textures/Streetmarket/Flags/T_FlagsToppers_Masks2.uasset
+Content/Map/StoneGate.umap
