--- a/Kristala3D.uproject
+++ b/Kristala3D.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.1",
+	"EngineAssociation": "{8AA81B66-4388-020B-61D2-5CAF92D11181}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
