Raksakkar Weapon Set

--- a/Kristala3D.uproject
+++ b/Kristala3D.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.4",
+	"EngineAssociation": "{DB7ADC5B-4B03-03CB-6A03-B3935C2C6C4A}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
