NO SINCRONIZAR ESTO ES MIO

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ Content/Map/Yury.umap
 /Content/PORTFOLIO_DO_NOT_SYNC
 Plugins/SideFX_Labs/Content/Blueprints/SideFX_Utilities_BP.uasset
 Plugins/SideFX_Labs/Content/Blueprints/SideFX_Utilities_BP.uasset
+Kristala3D.uproject
